--- a/module1-text-data/LS_DS_411_Text_Data_Assignment.ipynb
+++ b/module1-text-data/LS_DS_411_Text_Data_Assignment.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -40,16 +40,18 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x1243479e8>"
+       "<IPython.lib.display.YouTubeVideo at 0x22a1eeffe80>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import YouTubeVideo\n",
+    "import spacy\n",
+    "from spacy.tokenizer import Tokenizer\n",
     "\n",
     "YouTubeVideo('Jml7NVYm8cs')"
    ]
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +158,7 @@
        "4   12/3/2016 1 check-in They are located within ...   4.0 star rating   "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,19 +166,219 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "url = \"https://raw.githubusercontent.com/LambdaSchool/DS-Unit-4-Sprint-1-NLP/master/module1-text-data/data/yelp_coffeeshop_review_data.csv\"\n",
-    "\n",
+    "url = \"https://raw.githubusercontent.com/nedprz/DS-Unit-4-Sprint-1-NLP/main/module1-text-data/data/yelp_coffeeshop_review_data.csv\"\n",
     "shops = pd.read_csv(url)\n",
     "shops.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       5\n",
+       "1       4\n",
+       "2       4\n",
+       "3       2\n",
+       "4       4\n",
+       "       ..\n",
+       "7611    4\n",
+       "7612    5\n",
+       "7613    4\n",
+       "7614    3\n",
+       "7615    4\n",
+       "Name: star_rating, Length: 7616, dtype: object"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shops['star_rating']=shops['star_rating'].str[1]\n",
+    "shops['star_rating']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        1 check-in Love love loved the atmosphere! Ev...\n",
+       "1       Listed in Date Night: Austin, Ambiance in Aust...\n",
+       "2        1 check-in Listed in Brunch Spots I loved the...\n",
+       "3        Very cool decor! Good drinks Nice seating  Ho...\n",
+       "4       1 check-in They are located within the Northcr...\n",
+       "                              ...                        \n",
+       "7611    I actually step into this restaurant by chance...\n",
+       "7612    Ok, The Steeping Room IS awesome. How do they ...\n",
+       "7613    Loved coming here for tea, and the atmosphere ...\n",
+       "7614    he food is just average. The booths didn't fee...\n",
+       "7615    I finally stopped in for lunch with my colleag...\n",
+       "Name: full_review_text, Length: 7616, dtype: object"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shops['full_review_text']=shops['full_review_text'].str[11:]\n",
+    "shops['full_review_text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Start here "
+    "nlp = spacy.load(\"en_core_web_lg\")\n",
+    "\n",
+    "doc = nlp(shops['full_review_text'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      \n",
+      "1    1\n",
+      "check    check\n",
+      "-    -\n",
+      "in    in\n",
+      "Love    Love\n",
+      "love    love\n",
+      "loved    love\n",
+      "the    the\n",
+      "atmosphere    atmosphere\n",
+      "!    !\n",
+      "Every    every\n",
+      "corner    corner\n",
+      "of    of\n",
+      "the    the\n",
+      "coffee    coffee\n",
+      "shop    shop\n",
+      "had    have\n",
+      "its    -PRON-\n",
+      "own    own\n",
+      "style    style\n",
+      ",    ,\n",
+      "and    and\n",
+      "there    there\n",
+      "were    be\n",
+      "swings    swing\n",
+      "!    !\n",
+      "!    !\n",
+      "!    !\n",
+      "I    -PRON-\n",
+      "ordered    order\n",
+      "the    the\n",
+      "matcha    matcha\n",
+      "latte    latte\n",
+      ",    ,\n",
+      "and    and\n",
+      "it    -PRON-\n",
+      "was    be\n",
+      "muy    muy\n",
+      "fantastico    fantastico\n",
+      "!    !\n",
+      "Ordering    order\n",
+      "and    and\n",
+      "getting    get\n",
+      "my    -PRON-\n",
+      "drink    drink\n",
+      "were    be\n",
+      "pretty    pretty\n",
+      "streamlined    streamlined\n",
+      ".    .\n",
+      "I    -PRON-\n",
+      "ordered    order\n",
+      "on    on\n",
+      "an    an\n",
+      "iPad    iPad\n",
+      ",    ,\n",
+      "which    which\n",
+      "included    include\n",
+      "all    all\n",
+      "beverage    beverage\n",
+      "selections    selection\n",
+      "that    that\n",
+      "ranged    range\n",
+      "from    from\n",
+      "coffee    coffee\n",
+      "to    to\n",
+      "wine    wine\n",
+      ",    ,\n",
+      "desired    desire\n",
+      "level    level\n",
+      "of    of\n",
+      "sweetness    sweetness\n",
+      ",    ,\n",
+      "and    and\n",
+      "a    a\n",
+      "checkout    checkout\n",
+      "system    system\n",
+      ".    .\n",
+      "I    -PRON-\n",
+      "got    get\n",
+      "my    -PRON-\n",
+      "latte    latte\n",
+      "within    within\n",
+      "minutes    minute\n",
+      "!    !\n",
+      "      \n",
+      "I    -PRON-\n",
+      "was    be\n",
+      "hoping    hope\n",
+      "for    for\n",
+      "a    a\n",
+      "typical    typical\n",
+      "heart    heart\n",
+      "or    or\n",
+      "feather    feather\n",
+      "on    on\n",
+      "my    -PRON-\n",
+      "latte    latte\n",
+      ",    ,\n",
+      "but    but\n",
+      "found    find\n",
+      "myself    -PRON-\n",
+      "listing    list\n",
+      "out    out\n",
+      "all    all\n",
+      "the    the\n",
+      "possibilities    possibility\n",
+      "of    of\n",
+      "what    what\n",
+      "the    the\n",
+      "art    art\n",
+      "may    may\n",
+      "be    be\n",
+      ".    .\n",
+      "Any    any\n",
+      "ideas    idea\n",
+      "?    ?\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lemma Attributes\n",
+    "for token in doc:\n",
+    "    print(token.text, \"  \", token.lemma_)"
    ]
   },
   {
@@ -195,7 +397,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "shops['quality'] = "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -244,7 +448,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "U4-S1-NLP (Python 3)",
+   "display_name": "U4-S1-NLP (Python3)",
    "language": "python",
    "name": "u4-s1-nlp"
   },
@@ -258,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   },
   "toc-autonumbering": false
  },
