--- a/module2-vector-representations/LS_DS_412_Vector_Representations_Assignment.ipynb
+++ b/module2-vector-representations/LS_DS_412_Vector_Representations_Assignment.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -63,13 +63,13 @@
     "import requests\n",
     "\n",
     "\n",
-    "df = pd.read_csv('https://raw.githubusercontent.com/nedprz/DS-Unit-4-Sprint-1-NLP/main/module2-vector-representations/data/job_listings.csv')\n",
+    "jobs = pd.read_csv('https://raw.githubusercontent.com/nedprz/DS-Unit-4-Sprint-1-NLP/main/module2-vector-representations/data/job_listings.csv')\n",
     "                \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -200,13 +200,118 @@
        "[426 rows x 3 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = []\n",
+    "for i in jobs['description']:\n",
+    "    bs = BeautifulSoup(i, 'html.parser')\n",
+    "    x.append(bs.get_text())\n",
+    "    \n",
+    "jobs['description'] = x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>description</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>b\"Job Requirements:\\nConceptual understanding ...</td>\n",
+       "      <td>Data scientist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>b'Job Description\\n\\nAs a Data Scientist 1, yo...</td>\n",
+       "      <td>Data Scientist I</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>b'As a Data Scientist you will be working on c...</td>\n",
+       "      <td>Data Scientist - Entry Level</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>b'$4,969 - $6,756 a monthContractUnder the gen...</td>\n",
+       "      <td>Data Scientist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>b'Location: USA \\xe2\\x80\\x93 multiple location...</td>\n",
+       "      <td>Data Scientist</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0                                        description  \\\n",
+       "0           0  b\"Job Requirements:\\nConceptual understanding ...   \n",
+       "1           1  b'Job Description\\n\\nAs a Data Scientist 1, yo...   \n",
+       "2           2  b'As a Data Scientist you will be working on c...   \n",
+       "3           3  b'$4,969 - $6,756 a monthContractUnder the gen...   \n",
+       "4           4  b'Location: USA \\xe2\\x80\\x93 multiple location...   \n",
+       "\n",
+       "                          title  \n",
+       "0               Data scientist   \n",
+       "1              Data Scientist I  \n",
+       "2  Data Scientist - Entry Level  \n",
+       "3                Data Scientist  \n",
+       "4                Data Scientist  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jobs.head()"
    ]
   },
   {
@@ -217,6 +322,15 @@
    },
    "source": [
     "## 2) Use Spacy to tokenize the listings "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load(\"en_core_web_lg\")"
    ]
   },
   {
